# CalibMe

./: README.md
data/: 00003600.txt  soccer_field_model.mat
matlab/: IoU_from_homography.m  PanYTiltX2matrix.m  angular_dist_from_two_rotation.m  camera_project_3d_point.m  camera_to_homography.m  homography_from_two_camera.m  homography_warp.m  image_to_model_warp.m  iou_cal.m  logo_blur.m  model_to_image_homography.m  model_to_image_warp.m  project_back_project_model.m  project_model.m  project_model_by_homography.m  ptz_to_camera.m  readCamera.m  ut_IoU_from_homography.m  ut_homography_warp.m  ut_image_to_model_warp.m  ut_logo_blur.m  ut_model_to_image_warp.m  ut_project_back_project_model.m  ut_project_model.m  ut_project_model_by_homography.m  ut_ptz_to_camera.m  ut_warp_model_compute_iou.m  ut_warp_overlay_image.m  warp_model_compute_iou.m  warp_overlay_image.m  writeCamera.m
matlab/analyze_result/: analyze_result_reference_frame.m  vis_soccer_field.m
matlab/fig3_ground_truth_annot/: bra_mex_anno_pred.mat  image_to_model_warp.m  ut_image_to_model_warp.m  ut_project_model.m  worldcup_2014_model.mat
matlab/figures/fig3_ground_truth_annot/: annot_gt.key  bra_ned_anno_pred.mat  project_model.m  seq1_anno_pred.mat  seq2_anno_pred.mat  seq3_anno_pred.mat  seq4_anno_pred.mat
matlab/figures/fig3_ground_truth_annot/1/: 0500.mat
matlab/figures/fig3_ground_truth_annot/2/: 0623.mat
matlab/figures/fig3_ground_truth_annot/3/: 1590.mat
matlab/figures/fig4_FOV_distribution/: fl_hist.m  syn_gt_ptz.mat  ut_fl_hist.m  world_cup_gt_ptz.mat
matlab/figures/fig6_iou_result/: ut_project_back_project_model.m
matlab/fl_hist(field of view)/: fl_hist.m  ut_fl_hist.m
matlab/fl_hist(field of view)/result/: soccer1_seq1_gt.fig  soccer1_seq2_gt.fig  soccer2_seq2_gt.fig  soccer2_seq4_gt.fig
matlab/player_classify/: 1_FeatGen_Train.m  2_FeatGen_Test.m  3_generate_svm_model.m  4_ut_svmPre_fnfp_visualize.m
matlab/player_classify/utils/: fn.m  fp.m  svm_pre.m  visualization_cls.m
matlab/synthetic_data/: noisy_base_rotation.m  noisy_camera_location.m  noisy_observation.m  panYTiltX.m  pan_tilt_from_principle_point.m  pan_tilt_to_point.m  point_to_pan_tilt.m  ptz_from_two_point.m  sample_3d_cube.m  sample_point_in_image.m  two_point_calib.m  ut_sample_point_in_image.m  virtual_stadium.m  vis_noisy_camera_base_rotation.m  vis_noisy_camera_center.m  vis_noisy_observation.m
matlab/vanishing_point/: cal_vp.m  camera_to_homography.m  computeVP.m  compute_intersection_points.m  compute_linePt_vote.m  getLargeConnectedEdges.m  gt_17.mat  gt_79.mat  line_Vp_dist.m  ordervp.m  remove_redundant_points.m  ut_computeVP.m
matlab/vanishing_point/cross_ratio_from_model/: 17_vp.mat  79_vp.mat  cal_ratio.m  cross_ratio_from_model.m  match_image_and_model_ratio.m  ratio_horizontal_line.mat  ratio_vertical_line.mat
python/: README.md  Shot.py
src/boundle_adjustment/: CMakeLists.txt  ptz_ba_two_image.cpp  ut_ptz_boundle_adjustment.m
src/boundle_adjustment/cvx_pgl/: pgl_ptz_boundle_adjustment.cpp  pgl_ptz_boundle_adjustment.h
src/boundle_adjustment/data/: 0950.mat  1000.mat
src/boundle_adjustment/mexcpp/: mexcpp.h  mexcpp_test.cpp
src/ptz_ransac/: ptz_ransac.cpp  ut_ptz_ransac.m
src/referenceFrameCalib/: CMakeLists.txt
src/referenceFrameCalib/src/: cvxImgMatch.cpp  cvxImgMatch.h  main_calib.cpp  vul_plus.cpp  vul_plus.h
src/referenceFrameCalib/src/calib/calib/calib.xcodeproj/: project.pbxproj
src/referenceFrameCalib/src/calib/calib/calib.xcodeproj/project.xcworkspace/xcuserdata/jimmy.xcuserdatad/: UserInterfaceState.xcuserstate
src/referenceFrameCalib/src/calib/calib/calib.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/referenceFrameCalib/src/calib/calib/calib.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcschemes/: xcschememanagement.plist
src/referenceFrameCalib/src/opencv_util/: cvxImage_310.hpp  cvxImgMatch.cpp  cvxImgMatch.h  vl_sift_param.h
src/referenceFrameCalib/src/vxl_util/: vpgl_plus.cpp  vul_plus.cpp
src/referenceFrameCalib_v2/: CMakeLists.txt
src/referenceFrameCalib_v2/error_calcu/: camera2PTZ.m  camera_frames_sort_seq2.mat  error_950.m  error_calcu.m  gen_frames_ptz.m  gen_ground_truth_ptz.m  ptz_error_seq2.mat  seq2_frames_ptz.mat  seq2_ground_truth_ptz.mat
src/referenceFrameCalib_v2/error_calcu/error_result/: soccer1_seq1_ptz_error.mat  soccer1_seq2_ptz_error.mat  soccer2_seq2_ptz_error.mat  soccer2_seq4_ptz_error.mat
src/referenceFrameCalib_v2/result/: seq2_frames_camera.mat
src/referenceFrameCalib_v2/src/: main_calib.cpp
src/referenceFrameCalib_v2/src/calib/calib/calib.xcodeproj/: project.pbxproj
src/referenceFrameCalib_v2/src/calib/calib/calib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/referenceFrameCalib_v2/src/calib/calib/calib.xcodeproj/project.xcworkspace/xcuserdata/jimmy.xcuserdatad/: UserInterfaceState.xcuserstate
src/referenceFrameCalib_v2/src/calib/calib/calib.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcschemes/: calib.xcscheme
src/referenceFrameCalib_v2/src/eigen_util/: camera_matrix.cpp  camera_matrix.h  perspective_camera.cpp  perspective_camera.h  rotation_3d.h  util.cpp  util.h
tutorial/hello_world/: microblog.py
tutorial/hello_world/app/: routes.py
